Eevee shader compilation error: C1503: undefined variable "att1_is_srgb" #62090

Closed
opened 2019-03-01 17:16:09 +01:00 by Demeter Dzadik · 3 comments
Member

System Info
Windows 10
GTX 1070

Blender Version
Broken: 2.80, d7d180bd3d
Worked: couple weeks ago ish at least.

Short description of error
It took a while but I managed to reduce my node tree to 4 nodes to get the error. Seems to happen when both a Vertex Color and a Geometry node exist in the node tree. The result is purpleness.

Reproduction
vertex_color_purble.blend

  • Download attached blend.
  • Enter rendered/lookdev mode.
  • Behold, purple.
  • Check console to see the error.
**System Info** Windows 10 GTX 1070 **Blender Version** Broken: 2.80, d7d180bd3d8d Worked: couple weeks ago ish at least. **Short description of error** It took a while but I managed to reduce my node tree to 4 nodes to get the error. Seems to happen when both a Vertex Color and a Geometry node exist in the node tree. The result is purpleness. **Reproduction** [vertex_color_purble.blend](https://archive.blender.org/developer/F6736737/vertex_color_purble.blend) - Download attached blend. - Enter rendered/lookdev mode. - Behold, purple. - Check console to see the error.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Clément Foucault was assigned by Sebastian Parborg 2019-03-01 17:39:02 +01:00

This issue was referenced by 66228d4362

This issue was referenced by 66228d4362a64b31ad5614033412ba0b21ca371f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62090
No description provided.