Fix T62090 : Eevee shader compilation: undefined variable "att1_is_srgb"

The geom shader check was not needed and this uncovered an error in the
GPU_BARYCENTRIC_TEXCO optimization recently commited.